# GenAI-notes

day_01/: README.md  main.py  pyproject.toml
day_02/: README.md  main.py  pyproject.toml
day_03/: main.py  pyproject.toml
day_04/: main.py  pyproject.toml
